client/mp3-converter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
